# openbase

./: .gitignore  API_REFACTOR_SUMMARY.md  README.md  app.py  parsing.py  pyproject.toml  settings.py  spec.json
.github/workflows/: publish.yml
django_gui/: app.py  settings.py
django_gui/transformation/: transform_views_py.py
frontend/: index.html
frontend/assets/: index-BY9tWH4G.js  index-Bpe4mWGg.css  index-D22wS-G0.js  index-DgmLKVWf.js  index-sJangcaH.css
openbase/: cli.py
openbase/coder/: urls.py  views.py
openbase/coder_app/: apps.py  urls.py  views.py
openbase/config/: authentication.py  serializers.py  settings.py  urls.py  views.py  viewsets.py
openbase/core/: boilersync_manager.py  claude_code_helper.py  cli.py  default_env.py  directory_watcher.py  git_helpers.py  ir.py  parsing.py  paths.py  project_config.py  project_scaffolder.py  sourcemapped_dataclass.py  template_manager.py
openbase/core/cli/: cli.py  init.py  (+7 more)
openbase/manage_commands/: models.py  parsing.py  serializers.py  urls.py  views.py
openbase/models/: models.py  parsing.py  urls.py
openbase/openbase_app/: models.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
openbase/serializers/: urls.py
openbase/static/: index.html
openbase/tasks/: urls.py
openbase/urls/: urls.py
openbase/views/: urls.py
react/: package-lock.json  package.json  vite.config.ts
react/src/: App.tsx
server/: app.py  parsing.py  requirements.txt  settings.py  test_line_numbers.py  test_models.py
server/transformation/: transform_models.py
tests/: conftest.py  test_init.py  test_template_manager.py
transformation/: transform_models.py
