[project]
name = "django-gui"
version = "0.1.0"
description = "Django GUI"
authors = [{ name = "Gabe Montague", email = "gabemontague@outlook.com" }]
dependencies = ["Flask>=2.0.0", "flask-cors>=6.0.1", "python-dotenv>=1.0.0"]

[project.scripts]
django-gui-server = "django_gui.app:main"
django-gui-serve-dist = "django_gui.app:serve_dist"

[tool.hatch.build.targets.wheel]
packages = ["django_gui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
